fixed overlap issue between FirstSection.jsx and SecondSection.jsx on desktop view

--- a/src/style.css
+++ b/src/style.css
@@ -21,15 +21,25 @@
   }
 }
 
-.input {
-  @apply border border-black rounded-md py-2 px-4 w-full;
+@layer components {
+  .input {
+    @apply border border-black rounded-md py-2 px-4 w-full;
+  }
+
+  .card {
+    @apply w-72 xs:w-84 sm:w-88 aspect-video rounded-lg 
+            bg-cover px-8 py-5 shadow-lg;
+  }
+
+  .card-small-text {
+    @apply text-white text-xs tracking-widest;
+  }
+
+  .container-fluid {
+    @apply min-w-full !important;
+  }
 }
 
-.card {
-  @apply w-72 xs:w-84 sm:w-88 aspect-video rounded-lg
-          bg-cover px-8 py-5 shadow-lg;
-}
-
-.card-small-text {
-  @apply text-white text-xs tracking-widest;
-}
+/* .sm\:container {
+  max-width: 768px !important;
+} */
